updates to reconstruction paper: MAT distances, WAPLS

--- a/TA_ReconCompPaper.Rmd
+++ b/TA_ReconCompPaper.Rmd
@@ -420,32 +420,28 @@ ggplot(caribou.df, aes(Observation, Covariate, color=Model)) +
  ggsave("caribou_recons_age.png")
 ```
 
-<!-- ```{r} -->
-<!-- ggplot(caribou.df, aes(Age, Covariate,)) + -->
-<!--   labs(x="Observation", y="Unobserved Water Depth") + -->
-<!--   stat_summary(fun.y = mean, geom = "line", aes(Observation, Covariate, group=Model)) + -->
-<!--     stat_summary(fun.ymin = function(z) {quantile(z, 0.025)}, -->
-<!--                  fun.ymax = function(z) {quantile(z, 0.975)}, -->
-<!--                  geom = "ribbon", aes(Observation, Covariate, -->
-<!--                                       group=Model, color=Model, fill=Model), alpha=0.125) + -->
-<!--   facet_wrap(~ Model, ncol=1) + -->
-<!--   scale_y_reverse(lim=c(65, -20)) -->
-<!-- ggsave("caribou_recon_ribbon_age.pdf") -->
-<!-- ``` -->
+```{r}
+caribou_recons <- ggplot(caribou.df, aes(Age, Covariate)) + 
+  labs(x="cal yr BP", y="Water Table Depth (cm)") +
+  stat_summary(fun.y = mean, geom = "line", aes(Age, Covariate, group=Model)) + 
+    stat_summary(fun.ymin = function(z) {quantile(z, 0.025)},
+                 fun.ymax = function(z) {quantile(z, 0.975)},
+                 geom = "ribbon", aes(Age, Covariate,
+                                      group=Model, linetype=NA, fill=Model), alpha=0.3) +
+      stat_summary(fun.ymin = function(z) {quantile(z, 0.25)},
+                 fun.ymax = function(z) {quantile(z, 0.75)},
+                 geom = "ribbon", aes(Age, Covariate,
+                                      group=Model, linetype=NA, fill=Model), alpha=0.6) +
+  facet_wrap(~Model, ncol=1) + scale_y_reverse() + scale_x_reverse() + coord_cartesian(ylim = c(55,-10))
+  
 
+caribou_recons <- caribou_recons + theme_bw() + theme(legend.position = "none", axis.title = element_text(size=20), axis.text = element_text(size =18), strip.text = element_text(size = 20))
 
-<!-- ```{r} -->
-<!-- ggplot(caribou.df, aes(Age, Covariate,)) + -->
-<!--   labs(x="Observation", y="Unobserved Water Depth") + -->
-<!--   stat_summary(fun.y = mean, geom = "line", aes(Observation, Covariate, group=Model)) + -->
-<!--     stat_summary(fun.ymin = function(z) {quantile(z, 0.025)}, -->
-<!--                  fun.ymax = function(z) {quantile(z, 0.975)}, -->
-<!--                  geom = "ribbon", aes(Observation, Covariate, -->
-<!--                                       group=Model, color=Model, fill=Model), alpha=0.125) + -->
-<!--   facet_wrap(~ Model, ncol=1) + -->
-<!--   scale_y_reverse(lim=c(65, -20)) -->
-<!-- ggsave("caribou_recon_ribbon_age.pdf") -->
-<!-- ``` -->
+caribou_recons
+  
+
+ggsave("caribourecons_ribbons_age.png", width = 8, height = 11)
+```
 
 
 ```{r}
@@ -461,6 +457,15 @@ ggplot(subset(caribou.df, Model %in% c("MVGP", "WA")), aes(Observation, Covariat
 
 
 #Reconstruction figure for poster/paper
+
+```{r}
+levels(caribou.df$Model)
+
+caribou.df$Model <- factor(caribou.df$Model, levels = c("MVGP", "Bummer", "WA", "MLRC", "MAT", "RF"))
+
+```
+
+
 
 ```{r}
 
@@ -522,33 +527,246 @@ require(mapdata); require(maptools)
 cal_sites <- data.frame(raw_data$Peatland, raw_data$Location..lat.long..dec., raw_data$X, raw_data$X.1, raw_data$X.2)
 
 
+cal_sites$lat <- rep(NA, length(cal_sites),2)
+cal_sites$lon <- rep(NA, length(cal_sites),2)
 
-cal_sites$lat <- as.numeric(as.character(cal_sites$raw_data.Location..lat.long..dec.))+(as.numeric(as.character(cal_sites$raw_data.X/60)))
-# this doesn't actually work because there's a huge variety of ways that the lat longs are reported in the spreadsheet. 
+cal_sites[1:378,]$lat <- as.numeric(as.character(cal_sites[1:378,]$raw_data.Location..lat.long..dec.))+(as.numeric(as.character(cal_sites[1:378,]$raw_data.X/60)))
+
+cal_sites[1:378,]$lon <- as.numeric(as.character(cal_sites[1:378,]$raw_data.X.1))-(as.numeric(as.character(cal_sites[1:378,]$raw_data.X.2/60)))
+
+cal_sites[753:819,]$lat <- as.numeric(as.character(cal_sites[753:819,]$raw_data.Location..lat.long..dec.))
+cal_sites[753:819,]$lon <- as.numeric(as.character(cal_sites[753:819,]$raw_data.X))
+
+cal_sites[820:854,]$lat <- 34.92
+cal_sites[820:854,]$lon <- -77.09
 
 
+# data from Booth 2002 Table 1
+##Adams Trail
+cal_sites[410:419,]$lat <- 46.55
+cal_sites[410:419,]$lon <- -86.06
+
+##Au Train
+cal_sites[c(379:397, 420:423),]$lat <- 46.43
+cal_sites[c(379:397, 420:423),]$lon <- -86.86
+
+##Grand Traverse
+cal_sites[c(398:405, 531:562),]$lat <- 47.17
+cal_sites[c(398:405, 531:562),]$lon <- -88.255
+
+##Independence
+cal_sites[424:452,]$lat <- 47.42
+cal_sites[424:452,]$lon <- -88.01
+
+##Minden
+cal_sites[453:467,]$lat <- 43.61
+cal_sites[453:467,]$lon <- -82.84
+
+##North Rhody
+cal_sites[468:480,]$lat <- 46.58
+cal_sites[468:480,]$lon <- -86.07
+
+##Partridge
+cal_sites[481:502,]$lat <- 47.42
+cal_sites[481:502,]$lon <- -88.007
+
+##South Rhody
+cal_sites[503:518,]$lat <- 46.565
+cal_sites[503:518,]$lon <- -86.08
+
+##Tahquamenon
+cal_sites[c(406:409, 563:613),]$lat <- 46.475
+cal_sites[c(406:409, 563:613),]$lon <- -84.99
+
+##Uncle Sam
+cal_sites[519:526,]$lat <- 47.42
+cal_sites[519:526,]$lon <- -88.02
+
+##West Adams
+cal_sites[527:530,]$lat <- 46.55
+cal_sites[527:530,]$lon <- -86.104
+
+
+
+# Booth and Zygmunt 2005
+## Burro Bridge
+cal_sites[614:621,]$lat <- 37.93
+cal_sites[614:621,]$lon <- -107.73
+
+## Chatanooga
+cal_sites[622:635,]$lat <- 36.96
+cal_sites[622:635,]$lon <- -107.67
+
+## East Lilly
+cal_sites[636:645,]$lat <- 44.95
+cal_sites[636:645,]$lon <- -109.69
+
+## Henderson A
+cal_sites[646:650,]$lat <- 39.37
+cal_sites[646:650,]$lon <- -106.58
+
+## Henderson B
+cal_sites[651:658,]$lat <- 39.35
+cal_sites[651:658,]$lon <- -106.60
+
+## Keystone
+cal_sites[659:667,]$lat <- 38.87
+cal_sites[659:667,]$lon <- -107.04
+
+## Lizard
+cal_sites[668:672,]$lat <- 44.15
+cal_sites[668:672,]$lon <- -111.02
+
+## Little Moose
+cal_sites[673:684,]$lat <- 44.98
+cal_sites[673:684,]$lon <- -109.76
+
+## Lillypad
+cal_sites[685:699,]$lat <- 44.16
+cal_sites[685:699,]$lon <- -111.01
+
+## Robinson
+cal_sites[700:714,]$lat <- 44.17
+cal_sites[700:714,]$lon <- -111.07
+
+## Splains
+cal_sites[715:721,]$lat <- 38.83
+cal_sites[715:721,]$lon <- -107.075
+
+##SHafer
+cal_sites[722:730,]$lat <- 40.865
+cal_sites[722:730,]$lon <- -106.61
+
+##South Mineral
+cal_sites[731:738,]$lat <- 37.82
+cal_sites[731:738,]$lon <- -107.72
+
+## Wager Gulch
+cal_sites[739:747,]$lat <- 37.88
+cal_sites[739:747,]$lon <- -107.37
+
+## West Robinson
+cal_sites[748:752,]$lat <- 44.17
+cal_sites[748:752,]$lon <- -111.075
+
+# Markel et al 2010
+## Marathon B
+cal_sites[855:859,]$lat <- 60.60
+cal_sites[855:859,]$lon <- -151.21
+
+## No Name
+cal_sites[860:864,]$lat <- 60.64
+cal_sites[860:864,]$lon <- -151.08
+
+## Browns
+cal_sites[c(865:871, 923:937,947:962),]$lat <- 60.47
+cal_sites[c(865:871, 923:937,947:962),]$lon <- -150.73
+
+## Tear Drop
+cal_sites[872:877,]$lat <- 60.47
+cal_sites[872:877,]$lon <- -150.70
+
+## Funny River
+cal_sites[878:885,]$lat <- 60.41
+cal_sites[878:885,]$lon <- -150.902
+
+## Gas Field
+cal_sites[c(886:893, 963:978),]$lat <- 60.495
+cal_sites[c(886:893, 963:978),]$lon <- -151.25
+
+## Canaday
+cal_sites[897:904,]$lat <- 64.52
+cal_sites[897:904,]$lon <- -146.9
+
+## Park Highway
+cal_sites[905:911,]$lat <- 63.08
+cal_sites[905:911,]$lon <- -149.527
+
+## Jake Lake
+cal_sites[c(912:914,943:946),]$lat <- 62.43
+cal_sites[c(912:914,943:946),]$lon <- -150.70
+
+## Gate Creek
+cal_sites[915:922,]$lat <- 62.33
+cal_sites[915:922,]$lon <- -150.545
+
+## Caswell
+cal_sites[938:942,]$lat <- 62.004
+cal_sites[938:942,]$lon <- -150.061
+
+
+range(cal_sites$lat, na.rm=T)
+range(cal_sites$lon, na.rm=T)
+
+caribou_loc <- tibble(lat=44.985, lon=-68.81)
+
+```
+
+```{r}
+require(maps)
+require(mapdata)
+usa <- map_data("usa")
+canada <- map_data("worldHires", "Canada")
+mexico <- map_data("worldHires", "Mexico")
+
+alaska <- map_data("worldHires", "USA:Alaska")
+
+NAmap <- ggplot() + geom_polygon(data = usa, 
+                                 aes(x=long, y = lat, group = group), 
+                                 fill = "grey88", 
+                                 color="black") +
+    geom_polygon(data = canada, aes(x=long, y = lat, group = group), 
+                 fill = "grey88", color="black") + 
+    geom_polygon(data = mexico, aes(x=long, y = lat, group = group), 
+                 fill = "grey88", color="black") +
+    geom_polygon(data = alaska, aes(x=long, y = lat, group = group), 
+                                 fill = "grey88",  color="black") +
+    coord_fixed(xlim = c(-170, -20),  ylim = c(25, 70), ratio = 1.2)
+NAmap <- NAmap + geom_point(data = cal_sites, aes(x=lon, y=lat), shape=21, size=5, color="black", fill="lightblue") 
+NAmap <- NAmap + geom_point(data = caribou_loc, aes(x=lon, y=lat), shape=23, size=5,color="black", fill="orange")
+  
+NAmap + theme(line = element_blank(),
+          text = element_blank(), 
+          rect = element_blank())
+
+ggsave("TA_recon_map.pdf")
 
 
 ```
 
 ```{r}
-usa <- map_data("usa")
-canada <- map_data("worldHires", "Canada")
-mexico <- map_data("worldHires", "Mexico")
+## better map
 
-NAmap <- ggplot() + geom_polygon(data = usa, 
-                                 aes(x=long, y = lat, group = group), 
-                                 fill = "white", 
-                                 color="black") +
-    geom_polygon(data = canada, aes(x=long, y = lat, group = group), 
-                 fill = "white", color="black") + 
-    geom_polygon(data = mexico, aes(x=long, y = lat, group = group), 
-                 fill = "white", color="black") +
-    coord_fixed(xlim = c(-130, -65),  ylim = c(25, 50), ratio = 1.2)
-NAmap
+devtools::install_github("hrbrmstr/albersusa")
+
+library(albersusa)
+library(sf)
+library(sp)
+library(rgeos)
+library(maptools)
+library(ggplot2)
+library(ggalt)
+library(ggthemes)
+library(viridis)
+library(scales)
+
+us <- usa_composite()
+us_map <- fortify(us, region="name")
+
+gg <- ggplot()
+gg <- gg + geom_map(data=us_map, map=us_map,
+                    aes(x=long, y=lat, map_id=id),
+                    color="black", fill="grey88", size=0.1)
+gg <- gg + geom_point(data = cal_sites, aes(x=lon, y=lat), shape=21, size=5, color="black", fill="lightblue") + points_elided()
+
+gg <- gg + theme_map()
+
+gg + coord_map()
+
 
 
 ```
+
 
 
 Idea about testing the impact of sample size on reconstruction error. 
@@ -576,6 +794,76 @@ X_test <- X[to_test]
 
 
 ```
+
+
+
+```{r}
+training_dists <- paldist(y_prop)
+
+training_dists_mat <- as.matrix(training_dists)
+
+recon_dists <- paldist2(y_prop, y_recon_prop)
+
+recon_dists_mat <- training_distsas.matrix(recon_dists)
+
+hist(training_dists)
+hist(recon_dists)
+
+
+
+
+library(philentropy)
+
+training_distances <- distance(y_prop, method="squared_chord")
+
+recon_distances <- distance(y_prop, y_recon_prop, method = "squared_chord")
+
+hist(training_distances)
+hist(recon_distances)
+
+mean(training_dists)
+mean(recon_dists)
+
+wilcox.test(training_dists, recon_dists)
+
+```
+
+
+```{r}
+hist(modMAT$dist.n)
+mean(modMAT$dist.n)
+median(modMAT$dist.n)
+range(modMAT$dist.n)
+
+
+hist(predMAT$dist.n)
+mean(predMAT$dist.n)
+median(predMAT$dist.n)
+range(predMAT$dist.n)
+
+
+library(tidyverse)
+
+mod_dists <- tibble(set = "mod", distance = as.vector(modMAT$dist.n))
+
+pred_dists <- tibble(set = "pred", distance = as.vector(predMAT$dist.n))
+
+MAT_dists <- bind_rows(mod_dists, pred_dists)
+
+
+
+MAT_dists_plot <- ggplot(MAT_dists, aes(distance, fill=set)) + geom_density(alpha=0.7, adjust=1, colour="grey50") + labs(x="square chord distance") + scale_fill_discrete(name=element_blank(), breaks=c("mod", "pred"), labels=c("Training Set", "Reconstruction Set"))
+MAT_dists_plot <- MAT_dists_plot + theme_bw() + theme(legend.position = "bottom")
+MAT_dists_plot
+ggsave("MAT_dists_plot.pdf")
+
+
+```
+
+
+
+
+
 
 ```{r}
 n_samples_test <- length(pred_test$X[, 1])
