--- a/cross-validation.Rmd
+++ b/cross-validation.Rmd
@@ -195,9 +195,11 @@ for (i in 1:N) {
 
 if (file.exists(paste0(save_directory, "other-models-cv.RData"))) {
   load(file=paste0(save_directory, "other-models-cv.RData"))
-loa} else {
+} else {
   pred_mu_WA <- c()
   pred_sd_WA <- c()
+  pred_mu_WAPLS <- c()
+  pred_sd_WAPLS <- c()
   pred_mu_MLRC <- c()
   pred_sd_MLRC <- c()
   pred_mu_MAT <- c()
@@ -211,7 +213,7 @@ loa} else {
     X_test <- X[sample_idx[step_cv[i]:(step_cv[i+1] - 1)]]
     
     ## WA reconstruction - subset to deal with all zero occurrence species
-    zeros_idx <- which(colSums(y_prop_train) == 0)
+    zeros_idx <- which(apply(y_prop_train, 1, sum) == 0)
     if (length(zeros_idx) > 0) {
       modWA <- rioja::WA(y_prop_train[, - zeros_idx], X_train)
       predWA <- predict(modWA, y_prop_test[, - zeros_idx], sse=TRUE, nboot=1000)
@@ -224,8 +226,24 @@ loa} else {
     pred_mu_WA <- c(pred_mu_WA, predWA$fit[, 1])
     pred_sd_WA <- c(pred_sd_WA, sqrt(predWA$v1.boot[, 1]^2 + predWA$v2.boot[1]^2))
     
+    ## WAPLS reconstruction - subset to deal with all zero occurrence species
+    zeros_idx <- which(apply(y_prop_train, 1, sum) == 0)
+    if (length(zeros_idx) > 0) {
+      modWAPLS <- rioja::WAPLS(y_prop_train[, - zeros_idx], X_train, npls=5)
+      predWAPLS <- predict(modWAPLS, y_prop_test[, - zeros_idx], 
+                           npls=5, sse=TRUE, nboot=1000)
+    } else {
+      ## no data to subset
+      modWAPLS <- rioja::WAPLS(y_prop_train, X_train, npls=5)
+      predWAPLS <- predict(modWAPLS, y_prop_test, npls=5, sse=TRUE, nboot=1000)      
+    }
+    
+    pred_mu_WAPLS <- c(pred_mu_WAPLS, predWAPLS$fit[, 2])
+    pred_sd_WAPLS <- c(pred_sd_WAPLS, sqrt(predWAPLS$v1.boot[, 2]^2 + 
+                                             predWA$v2.boot[2]^2))
+    
     ## MLRC reconstruction - subset to deal with all zero occurrence species
-    zeros_idx <- which(colSums(y_prop_train) == 0)
+    zeros_idx <- which(apply(y_prop_train, 1, sum) == 0)
     if (length(zeros_idx) > 0) {
       modMLRC <- rioja::MLRC(y_prop_train[, - zeros_idx], X_train)
       predMLRC <- predict(modMLRC, y_prop_test[, - zeros_idx],
@@ -253,8 +271,8 @@ loa} else {
     rf <- randomForest(y ~ ., data = train, ntree=n_samples)
     preds_rf <- rbind(preds_rf, predict(rf, test, predict.all=TRUE)$individual)
   }
-  save(pred_mu_WA, pred_sd_WA, pred_mu_MLRC, pred_sd_MLRC, 
-       pred_mu_MAT, pred_sd_MAT, preds_rf, 
+  save(pred_mu_WA, pred_sd_WA, pred_mu_WAPLS, pred_sd_WAPLS,
+       pred_mu_MLRC, pred_sd_MLRC, pred_mu_MAT, pred_sd_MAT, preds_rf, 
        file= paste0(save_directory, "other-models-cv.RData"))
 }
 ```
@@ -373,18 +391,20 @@ if (file.exists(paste0(save_directory, "bummer-cv-predictions.RData"))) {
 ## Plot results
 
 ```{r} 
-layout(matrix(1:6, 2, 3))
+png(file="cv-plot1.png", width=9, height=6, units="in", res=400)
+
+layout(matrix(1:9, 3, 3))
 ## sort the data to be in the same order as the predictions
 plot(apply(X_pred, 2, mean) ~ X[sample_idx], ylab="predicted mean", xlab="Observed", 
      main="Cross-validation of MVGP model", xlim=c(-40, 80), ylim=c(-40, 80))
 ## Notice most of the confidence intervals cover the red linear regression line 
-## i.e. the 95% CI is close to 95%
+## i.e. the 95% CI is close to 95% 
 segments(x0=X[sample_idx], y0=apply(X_pred, 2, quantile, prob=0.025), 
          x1=X[sample_idx], y1=apply(X_pred, 2, quantile, prob=0.975), 
          col=adjustcolor("black", alpha.f=0.25))
 abline(a=0, b=1, col="red")
 abline(lm(apply(X_pred, 2, mean) ~ X[sample_idx]), col="blue")
-summary(lm(apply(X_pred, 2, mean) ~ X[sample_idx]))
+# summary(lm(apply(X_pred, 2, mean) ~ X[sample_idx]))
 
 ## sort the data to be in the same order as the predictions
 plot(pred_mu_WA ~ X[sample_idx], ylab="predicted mean", xlab="Observed", 
@@ -396,7 +416,19 @@ segments(x0=X[sample_idx], y0=pred_mu_WA - 2 * pred_sd_WA,
          col=adjustcolor("black", alpha.f=0.25))
 abline(a=0, b=1, col="red")
 abline(lm(pred_mu_WA ~ X[sample_idx]), col="blue")
-summary(lm(pred_mu_WA ~ X[sample_idx]))
+# summary(lm(pred_mu_WA ~ X[sample_idx]))
+
+## sort the data to be in the same order as the predictions
+plot(pred_mu_WAPLS ~ X[sample_idx], ylab="predicted mean", xlab="Observed", 
+     main="Cross-validation of WAPLS model", xlim=c(-40, 80), ylim=c(-40, 80))
+## Notice most of the confidence intervals cover the red linear regression line 
+## i.e. the 95% CI is not close to 95%
+segments(x0=X[sample_idx], y0=pred_mu_WAPLS - 2 * pred_sd_WAPLS,
+         x1=X[sample_idx], y1=pred_mu_WAPLS + 2 * pred_sd_WAPLS,
+         col=adjustcolor("black", alpha.f=0.25))
+abline(a=0, b=1, col="red")
+abline(lm(pred_mu_WAPLS ~ X[sample_idx]), col="blue")
+# summary(lm(pred_mu_WAPLS ~ X[sample_idx]))
 
 ## sort the data to be in the same order as the predictions
 plot(pred_mu_MLRC ~ X[sample_idx], ylab="predicted mean", xlab="Observed", 
@@ -408,7 +440,7 @@ segments(x0=X[sample_idx], y0=pred_mu_MLRC - 2 * pred_sd_MLRC,
          col=adjustcolor("black", alpha.f=0.25))
 abline(a=0, b=1, col="red")
 abline(lm(pred_mu_MLRC ~ X[sample_idx]), col="blue")
-summary(lm(pred_mu_MLRC ~ X[sample_idx]))
+# summary(lm(pred_mu_MLRC ~ X[sample_idx]))
 
 ## sort the data to be in the same order as the predictions
 plot(pred_mu_MAT ~ X[sample_idx], ylab="predicted mean", xlab="Observed", 
@@ -420,7 +452,7 @@ segments(x0=X[sample_idx], y0=pred_mu_MAT - 2 * pred_sd_MAT,
          col=adjustcolor("black", alpha.f=0.25))
 abline(a=0, b=1, col="red")
 abline(lm(pred_mu_MAT ~ X[sample_idx]), col="blue")
-summary(lm(pred_mu_MAT ~ X[sample_idx]))
+# summary(lm(pred_mu_MAT ~ X[sample_idx]))
 
 ## sort the data to be in the same order as the predictions
 plot(apply(preds_rf, 1, mean) ~ X[sample_idx], ylab="predicted mean", xlab="Observed", 
@@ -432,7 +464,7 @@ segments(x0=X[sample_idx], y0=apply(preds_rf, 1, quantile, prob=0.025),
          col=adjustcolor("black", alpha.f=0.25))
 abline(a=0, b=1, col="red")
 abline(lm(apply(preds_rf, 1, mean) ~ X[sample_idx]), col="blue")
-summary(lm(apply(preds_rf, 1, mean) ~ X[sample_idx]))
+# summary(lm(apply(preds_rf, 1, mean) ~ X[sample_idx]))
 
 ## sort the data to be in the same order as the predictions
 plot(apply(X_pred_bummer, 2, mean) ~ X[sample_idx], 
@@ -445,47 +477,50 @@ segments(x0=X[sample_idx], y0=apply(X_pred_bummer, 2, quantile, prob=0.025),
          col=adjustcolor("black", alpha.f=0.25))
 abline(a=0, b=1, col="red")
 abline(lm(apply(X_pred_bummer, 2, mean) ~ X[sample_idx]), col="blue")
-summary(lm(apply(X_pred_bummer, 2, mean) ~ X[sample_idx]))
+# summary(lm(apply(X_pred_bummer, 2, mean) ~ X[sample_idx]))
 
-
-dev.copy(pdf, "cv-plot1.pdf", width=9,height=6)
-
-
+dev.off()
 ```
 
+![](./cv-plot1.png)
+
+\begin{figure}
+\includegraphics[width=1.0\linewidth]{cv-plot1.png}
+\end{figure}
 
 ```{r}
-coverage <- matrix(0, N, 6)
-MSPE <- matrix(0, N, 6)
-MAE <- matrix(0, N, 6)
-CRPS <- matrix(0, N, 6)
+coverage <- matrix(0, N, 7)
+MSPE <- matrix(0, N, 7)
+MAE <- matrix(0, N, 7)
+CRPS <- matrix(0, N, 7)
 
 for (i in 1:N) {
   MSPE[i, 1] <- (X[sample_idx][i] - mean(X_pred[, i]))^2
   MSPE[i, 2] <- (X[sample_idx][i] - mean(X_pred_bummer[, i]))^2
   MSPE[i, 3] <- (X[sample_idx][i] - pred_mu_WA[i])^2
-  MSPE[i, 4] <- (X[sample_idx][i] - pred_mu_MLRC[i])^2
-  MSPE[i, 5] <- (X[sample_idx][i] - pred_mu_MAT[i])^2
-  MSPE[i, 6] <- (X[sample_idx][i] - mean(preds_rf[i, ]))^2
+  MSPE[i, 4] <- (X[sample_idx][i] - pred_mu_WAPLS[i])^2
+  MSPE[i, 5] <- (X[sample_idx][i] - pred_mu_MLRC[i])^2
+  MSPE[i, 6] <- (X[sample_idx][i] - pred_mu_MAT[i])^2
+  MSPE[i, 7] <- (X[sample_idx][i] - mean(preds_rf[i, ]))^2
 
   MAE[i, 1] <- abs(X[sample_idx][i] - median(X_pred[, i]))
   MAE[i, 2] <- abs(X[sample_idx][i] - median(X_pred_bummer[, i]))
   MAE[i, 3] <- abs(X[sample_idx][i] - pred_mu_WA[i])
-  MAE[i, 4] <- abs(X[sample_idx][i] - pred_mu_MLRC[i])
-  MAE[i, 5] <- abs(X[sample_idx][i] - pred_mu_MAT[i])
-  MAE[i, 6] <- abs(X[sample_idx][i] - median(preds_rf[i, ]))
+  MAE[i, 4] <- abs(X[sample_idx][i] - pred_mu_WAPLS[i])
+  MAE[i, 5] <- abs(X[sample_idx][i] - pred_mu_MLRC[i])
+  MAE[i, 6] <- abs(X[sample_idx][i] - pred_mu_MAT[i])
+  MAE[i, 7] <- abs(X[sample_idx][i] - median(preds_rf[i, ]))
     
   coverage[i, 1] <- 
     X[sample_idx][i] > quantile(X_pred[, i], prob=0.025) && X[sample_idx][i] < quantile(X_pred[, i], prob=0.975)
-
   coverage[i, 2] <- 
     X[sample_idx][i] > quantile(X_pred_bummer[, i], prob=0.025) &&
     X[sample_idx][i] < quantile(X_pred_bummer[, i], prob=0.975)
   coverage[i, 3] <- (X[sample_idx][i] > (pred_mu_WA[i] - 2 * pred_sd_WA[i])) && (X[sample_idx][i] < (pred_mu_WA[i] + 2 * pred_sd_WA[i]))
-  coverage[i, 4] <- (X[sample_idx][i] > (pred_mu_MLRC[i] - 2 * pred_sd_MLRC[i])) && (X[sample_idx][i] < (pred_mu_MLRC[i] + 2 * pred_sd_MLRC[i]))
-  (coverage[i, 5] <- X[sample_idx][i] > (pred_mu_MAT[i] - 2 * pred_sd_MAT[i])) && (X[sample_idx][i] < (pred_mu_MAT[i] + 2 * pred_sd_MAT[i]))
-  coverage[i, 6] <-   
-    X[sample_idx][i] > quantile(preds_rf[i, ], prob=0.025) &&
+  coverage[i, 4] <- (X[sample_idx][i] > (pred_mu_WAPLS[i] - 2 * pred_sd_WAPLS[i])) && (X[sample_idx][i] < (pred_mu_WAPLS[i] + 2 * pred_sd_WAPLS[i]))
+  coverage[i, 5] <- (X[sample_idx][i] > (pred_mu_MLRC[i] - 2 * pred_sd_MLRC[i])) && (X[sample_idx][i] < (pred_mu_MLRC[i] + 2 * pred_sd_MLRC[i]))
+  coverage[i, 6] <- (X[sample_idx][i] > (pred_mu_MAT[i] - 2 * pred_sd_MAT[i])) && (X[sample_idx][i] < (pred_mu_MAT[i] + 2 * pred_sd_MAT[i]))
+  coverage[i, 7] <- X[sample_idx][i] > quantile(preds_rf[i, ], prob=0.025) &&
     X[sample_idx][i] < quantile(preds_rf[i, ], prob=0.975)
   
 }
@@ -493,14 +528,16 @@ for (i in 1:N) {
 CRPS[, 1] <- makeCRPS(X_pred, X[sample_idx], dim(X_pred)[1])
 CRPS[, 2] <- makeCRPS(X_pred_bummer, X[sample_idx], dim(X_pred_bummer)[1])
 CRPS[, 3] <- makeCRPSGauss(pred_mu_WA, pred_sd_WA, X[sample_idx])
-CRPS[, 4] <- makeCRPSGauss(pred_mu_MLRC, pred_sd_MLRC, X[sample_idx])
-CRPS[, 5] <- makeCRPSGauss(pred_mu_MAT, pred_sd_MAT, X[sample_idx])
-CRPS[, 6] <- makeCRPS(t(preds_rf), X[sample_idx], dim(preds_rf)[2])
+CRPS[, 4] <- makeCRPSGauss(pred_mu_WAPLS, pred_sd_WAPLS, X[sample_idx])
+CRPS[, 5] <- makeCRPSGauss(pred_mu_MLRC, pred_sd_MLRC, X[sample_idx])
+CRPS[, 6] <- makeCRPSGauss(pred_mu_MAT, pred_sd_MAT, X[sample_idx])
+CRPS[, 7] <- makeCRPS(t(preds_rf), X[sample_idx], dim(preds_rf)[2])
 
-colnames(MSPE) <- c("MVGP", "Bummer", "WA", "MLRC", "MAT", "RF")
-colnames(MAE) <- c("MVGP", "Bummer", "WA", "MLRC", "MAT", "RF")
-colnames(coverage) <- c("MVGP", "Bummer", "WA", "MLRC", "MAT", "RF")
-colnames(CRPS) <- c("MVGP", "Bummer", "WA", "MLRC", "MAT", "RF")
+models <- c("MVGP", "Bummer", "WA", "WAPLS", "MLRC", "MAT", "RF")
+colnames(MSPE) <- models
+colnames(MAE) <- models
+colnames(coverage) <- models
+colnames(CRPS) <- models
 results <- rbind(
   apply(MSPE, 2, mean), apply(MAE, 2, mean),
   apply(coverage, 2, mean), apply(CRPS, 2, mean))
